<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" android:background="@color/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register" tools:context="com.jonh.easyenglish.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <EditText
                android:id="@+id/txtNombreReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/txtApeReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/txtEmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/txtPassReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <EditText
                android:id="@+id/txtPassRepReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passRepeat"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btnRegister" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="30dp" android:text="@string/action_register"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/layout_buttons"/>
    </LinearLayout>
</RelativeLayout>
